[build-system]
requires = ["setuptools>=75.6.0", "wheel", "setuptools_scm[toml]>=5.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/ApeWorX/eth-pydantic-types"
Issues = "https://github.com/ApeWorX/eth-pydantic-types/issues"
Documentation = "https://docs.apeworx.io/eth-pydantic-types"

[project]
name = "eth-pydantic-types"
dynamic = ["version"]
license = "Apache-2.0"
description = "Pydantic Types for Ethereum"
keywords = ["ethereum", "pydantic", "validation"]
readme = "README.md"
authors = [
    { name = "ApeWorX Ltd.", email="admin@apeworx.io"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<4"
dependencies = [
    "cchecksum>=0.0.3,<1",
    "hexbytes>=0.3.1,<2",
    "eth-utils>=2.3.1,<6",
    "eth-typing>=3.5.2,<6",
    "pydantic>=2.5.2,<3",
    "typing_extensions>=4.8.0,<5",
]

[dependency-groups]
test = [  # `test` GitHub Action jobs uses this
    "pytest>=6.0",  # Core testing package
    "pytest-xdist",  # Multi-process runner
    "pytest-cov>=4.0.0,<5",  # Coverage analyzer plugin
    "pytest-mock",  # For creating mocks
    "hypothesis>=6.2.0,<7.0",  # Strategy-based fuzzer
    "hypothesis-jsonschema==0.19.0",  # JSON Schema fuzzer extension
    "eth-hash[pycryptodome]",  # For backends to work
]
lint = [
    "ruff>=0.12.0",  # Unified linter and formatter
    "mypy>=1.16.1,<2",  # Static type analyzer
    "types-setuptools",  # Needed for mypy type shed
    "mdformat>=0.7.22",  # Auto-formatter for markdown
    "mdformat-gfm>=0.3.5",  # Needed for formatting GitHub-flavored markdown
    "mdformat-frontmatter>=0.4.1",  # Needed for frontmatters-style headers in issue templates
    "mdformat-pyproject>=0.0.2",  # Allows configuring in pyproject.toml
]
docs = [
    "sphinx-ape==0.1.0",
]
dev = [
    "commitlint",  # Check for conventionalcommits
    "pre-commit",  # Ensure that linters are run prior to committing
    "pytest-watch",  # `ptw` test watcher/runner
    "ipdb",  # Debugger (Must use `export PYTHONBREAKPOINT=ipdb.set_trace`)
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "doc"},
]

[tool.setuptools]
packages = ["eth_pydantic_types"]

[tool.setuptools_scm]
# The fallback version is so that CI/CD systems will use a more accurate version.
# Otherwise, you may have issues with plugins' pinning Ape and not using the expected version.
# This version is purposely set to really high minor so that it should always work
# with newer, stricter plugin releases.
# NOTE: This should be bumped with every minor release!
fallback_version = "0.1.0"
write_to = "eth_pydantic_types/version.py"

[tool.pytest.ini_options]
addopts = """
    -p no:ape_test
    -p no:pytest_ethereum
"""
python_files = "test_*.py"
testpaths = "tests"
markers = "fuzzing: Run Hypothesis fuzz test suite"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# Select rule categories to enforce
select = [
    # Core Python errors and style
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear - common bugs/design issues
    "C4",   # flake8-comprehensions - simplify comprehensions
    "UP",   # pyupgrade - modern Python features/idioms
    "RET",  # flake8-return - cleaner return statements
    "SIM",  # flake8-simplify - code simplification
    "S",    # flake8-bandit - security issues
    "TCH",  # flake8-type-checking - type annotation improvements
    "T10",  # flake8-debugger - detect debugger calls/imports
    "FIX",  # flake8-fixme - detect FIXME, TODO, XXX comments
]

# Rules to ignore
ignore = [
    "E501",

    # Specific bugbear issues
    "B904",     # Use 'raise from' in except blocks
    "B006",     # Mutable default arguments
    "B007",     # Loop control variable not used within loop body
    "B012",     # Jump statements in finally blocks
    "B028",     # No explicit stacklevel in warnings

    # FIXME/TODO comments - these are intentional markers for future work
    "FIX002",   # Line contains TODO
    "FIX004",   # Line contains HACK

    # Code structure preferences
    "SIM102",   # Use a single if statement instead of nested if statements
    "SIM105",   # Use contextlib.suppress instead of try-except-pass
    "SIM108",   # Use ternary operator instead of if-else block
    "SIM113",   # Use enumerate instead of manually incrementing counter
    "SIM114",   # If branches with identical arm bodies (combine with or)
    "SIM115",   # Use context manager for opening files
    "SIM116",   # Use dictionary instead of if-statements
    "SIM117",   # Multiple with statements
    "B018",     # Useless expression

    # Return statement style
    "RET501",   # Do not explicitly return None
    "RET502",   # Implicit return at the end of function able to return non-None value
    "RET503",   # Missing explicit return at the end of function able to return non-None value
    "RET504",   # Unnecessary assignment before return
    "RET505",   # Unnecessary else after return
    "RET506",   # Unnecessary else after raise
    "RET507",   # Unnecessary else after continue
    "RET508",   # Unnecessary else after break

    # Security issues (allow common patterns in the codebase)
    "S101",     # Use of assert (many asserts are used for type checking)
    "S102",     # Use of exec (needed in some specific places)
    "S105",     # Hardcoded password string
    "S110",     # Try-except-pass (common pattern for handling optional features)
    "S112",     # Try-except-continue
    "S113",     # Request without timeout
    "S202",     # Tarfile unsafe members
    "S307",     # Use of eval
    "S311",     # Suspicious non-cryptographic random usage
    "S603",     # Subprocess without shell=True
    "S607",     # Start process with partial path

    # Style/readability issues (improve incrementally)
    "C416",     # Unnecessary comprehension (rewrite using list/set/dict)
    "C408",     # Unnecessary dict() call (rewrite as literal)
    "C417",     # Unnecessary map usage (replace with generator)
    "C414",     # Unnecessary list/dict call within another function
    "C401",     # Unnecessary generator (rewrite as comprehension)
    "C409",     # Unnecessary literal within tuple/list/dict call
    "C419",     # Unnecessary comprehension in call
    "SIM101",   # Duplicate isinstance call
    "SIM103",   # Needless boolean conversion
    "SIM110",   # Reimplemented builtin
    "SIM118",   # Use 'key in dict' instead of 'key in dict.keys()'
    "SIM401",   # Use dict.get instead of if-else block
    "SIM910",   # Use dict.get(key) instead of dict.get(key, None)
    "TC001",    # Move application import into type-checking block
    "TC003",    # Move standard library import into type-checking block
    "TC006",    # Add quotes to type expression in `typing.cast()`
    "UP028",    # Replace yield over for loop with yield from
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "D",        # Don't require docstrings in tests
    "E501",     # Line length in tests is less critical
    "S101",     # Allow assert in tests
    "B011",     # Allow assert False in tests (common pattern)
]
"**/conftest.py" = [
    "F401",     # Unused imports in conftest.py are often for fixtures
    "F841",     # Allow unused variables in conftest (often for fixture side effects)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["eth_pydantic_types"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
indent-style = "space"
docstring-code-format = true

[tool.mdformat]
number = true

[tool.mypy]
exclude = ["build/", "dist/", "docs/"]
check_untyped_defs = true
plugins = ["pydantic.mypy"]
